--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -574,39 +574,8 @@ In general including collisions had little to no effect on the results and chang
 
 % TODO Also look again at fitting just to region where expression is valid.
 
-\section{Planned future work}\label{sec:zvp-future_work}
-Simulations can only go so far. After a successful proposal application, five weeks of beam time have been awarded on the GEMINI-PW laser facility at the \ac{CLF} \cite{LaserSystemGemini}. This July, the study of mass-limited ZVP electron bunches will be put to the test as part of a three-pronged experimental campaign. The main experimental goals are
-\begin{enumerate}
-	\item to characterise the X-ray \ac{HHG} emission from the reflection of a relativistic laser of a solid target, following on from a the March 2023 experiment at the ORION laser facility at AWE \cite{hoppsOverviewLaserSystems2013}, which is discussed in great detail in the following Chapter;
-	\item to simultaneously measure and correlate \ac{HHG} and the ZVP electron bunches using a novel experimental setup;
-	\item to apply the attosecond X-ray \ac{HHG} beam as a diagnostic tool in a proof of principle warm dense matter experiment.
-\end{enumerate}
-Preparations are now underway. The requirements for this experiment are simple: a relativistically intense high contrast laser pulse ($a_0 \ge 10$) of a few femtoseconds duration incident on a solid target with surface perturbations small compared to the wavelength of the laser pulse. A simulation describing the experimental setup for the ZVP bunch measurement is given in Figure \ref{fig:experimentsetuphhgbunches2}. 
-\begin{figure}
-	\centering
-	\includegraphics[width=1\linewidth]{figures/zvp/Experiment_setup_HHG_bunches2}
-	\caption[Planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches.]{A simulation of the planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches. This novel setup enables the simultaneous measurement of attosecond ZVP electron bunches and their coherent emission of X-ray light. The GEMINI-PW laser pulse is incident at \qty{45}{\degree} on the low density polyethylene target with a preplasma scale length of $0.2\lambda_\mathrm{L}$. For this angle of incidence, transmitted bunches and specularly reflected X-ray harmonics are produced at a frequency of $\omega_\mathrm{L}$.}
-	\label{fig:experimentsetuphhgbunches2}
-\end{figure}
-By focusing the laser onto the edge of a transversely mass-limited target, the emitted electron bunch energies will be maximised. Simulations suggest it should be possible to simultaneously measure the specularly reflected \ac{HHG} and the attosecond electron bunches that produce it. Note via equations \ref{eq:zvp_N} and \ref{eq:zvp_T}, the low density target of Figure \ref{fig:experimentsetuphhgbunches2} will produce larger and more energetic bunches. They are therefore a more practical choice for the experiment relative to the aluminium targets of previous sections
 
-It is necessary to conduct PIC code parameter scans for this new geometry. While normal incidence was most convenient for initial simulations, oblique incidence is more optimal for \ac{HHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and as can be understood from equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions for the ZVP mechanism at oblique incidence. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{HHG} beam intensity at focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is necessary, therefore, to test the new predictions for oblique incidence energy scalings and total electron bunch charge as well as the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of preplasma scale length. In this work so far, it was assumed that the optima for electron bunch production are simply those for \ac{HHG} given their intrinsic link.
-
-\subsubsection{GEMINI-PW laser facility}
-The GEMINI-PW laser facility housed at the \ac{CLF} is a petawatt class facility consisting of two 30 fs beams each delivering a maximum focused intensity of \qty{2e21}{W.cm^{-2}} at a repetition rate of 0.05 Hz. Such high frequency of operation has led to a paradigm shift in high power laser physics experimentation with the arrival of statistically significant results.
-
-
-\subsubsection{Targets}
-A range of thick, flat solid targets are proposed to probe the density parameter space: diamond, a selection of plastics (polymethyl methacrylate, low and high density polyethylene and polycarbonate) and mirrored targets, which produced interesting and slightly unexpected results in the ORION experiment. It would also be interesting to produce foam targets gaining access the optimal low $S$ regime \cite{bataniPhysicsIssuesShock2014}. Target wheels will be used to take full advantage of the high shot rate of the GEMINI-PW laser.
-
-For target edge shots, high edge precision is absolutely essential. To overcome this challenge we have designed 300 $\mu$m cryo-etched silicon targets with well-defined edges of micron precision. However, as we anticipate some relaxation in the requirement for such micron precision given the smoothing from preplasma expansion and the smoothing effect of the main pulse interaction as noted by Dromey \textit{et al} \cite{dromeyDiffractionlimitedPerformanceFocusing2009}, we will also explore tape drives as an option, however, considering the jitter of such devices, we anticipate a low success rate of $\sim$ 4 \%. This is not necessarily unreasonable. Shot-to-shot variations in laser pulse focal spot position are typically on the order of the focal spot itself. Therefore only a third of silicon target shots will be successful and will depend on the gathering of sufficient statistics as will be possible with the high repetition rate of the GEMINI PW laser facility. Successful shots will be identified using a third harmonic imaging line \cite{dromeyDiffractionlimitedPerformanceFocusing2009}. 
-
-\subsubsection{Diagnostics}
-The electron bunches will be measured using an electron spectrometer placed a few centimetres from the target to measure the time-integrated energy spectrum. The spectrometer will be shielded from the laser pulse and any \ac{HHG} in transmission using a flash coated kapton foil which should not significantly hinder the MeV electron bunches produced in the interaction. Mordovanakis \textit{et al} used Image Plate stacks to obtain the electron bunch structure and emission angle, it may be necessary to perform this first to accurately position the spectrometer \cite{mordovanakisQuasimonoenergeticElectronBeams2009}. While resolving attosecond durations remains a serious technical challenge of experimental science, we hope to measure the production of Coherent Transition Radiation from a secondary target and therefore infer the presence of a bunch train \cite{linIsolatedAttosecondElectron2020}. The X-ray \ac{HHG} emission will be measured using a replica OHREX spectrometer \cite{beiersdorferLineshapeSpectroscopyVery2016}, a spherically bent crystal spectrometer with ultra-high resolution and high-signal-to-noise ratio. Lower order harmonics will be measured using angularly resolved EUV spectrometers. Note that in the absence of attosecond resolution diagnostics, measuring the harmonic spectrum of the coherent \ac{HHG} is the only way to reconstruct the temporal shape of the pulse. Simulations have suggested that the reflected spectrum produced by Coherent Synchrotron Emission of the electron bunches is approximately Fourier-limited \cite{cousensElectronTrajectoriesAssociated2020}. A quarter wave plate could be used to convert the incoming laser pulse to a circular polarisation to compare the signals to those detected in the absence of zeros in the vector potential.
-
-\subsubsection{Preplasma scale lengths and prepulse control}
-Observation of the ZVP mechanism requires a sufficiently steep density gradients at the laser-plasma interface. An inevitable challenge of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup \cite{doumyCompleteCharacterizationPlasma2004}. Each mirror is an anti-reflection coated optic placed in the path of the laser beam, acting as an optical switch. As the laser fluence passes the damage threshold of the optic, plasma forms on the front surface and the mirror starts to reflect. Investigation of preplasma generation will occur in parallel to the main experimental goals.
 
 \section{Conclusions}\label{sec:zvp-conclusion}
 % TODO: 3D3V mention somewhere
-The Zero Vector Potential mechanism describes the post-ponderomotive rapid absorption of ultra-relativistic laser energy by a solid density overdense, collisionless and fully ionised plasma on the timescales of ion immobility. The defining characteristics of the mechanism have been identified in 3D PIC simulations including the observation of a zero of the vector potential propagating at speed $\approx 1.4c$ through a high density ZVP electron bunch at the front surface of the plasma early in the ablative journey of the electron bunch. Simulations have suggested that from currently operational 10 PW short pulse laser facilities and foam targets, the ZVP mechanism can produce a train of attosecond duration, nano-Coulomb electron bunches, each with a transverse emittance of a few $\unit{nm.rad}$. Such charge and quality is comparable to state-of-the-art electron bunch accerators but on paradigm shifting timescales. Such timescales being those on which atomic processes occur, these electron bunches could be manipulated to literally `shed light' onto fundamental biological and chemical processes. Via a massive 2D PIC parameter scan the energies of such mass-limited electron bunches have been compared to those predicted by the ZVP model, identifying a range of validity for the model, specifically $a_0>10$, $S>1$. These simulations were also used to confirm the energy absorption scaling in 2D up to and into the QED regime. Finally, details were provided on the planned GEMINI-PW experiment where ZVP electron bunches and ZVP absorption could be observed for the first time. On the theme of experimentation, the following Chapter will now switch gears from absorption to reflection for the discussion recent results from the ORION laser facility.
+The Zero Vector Potential mechanism describes the post-ponderomotive rapid absorption of ultra-relativistic laser energy by a solid density overdense, collisionless and fully ionised plasma on the timescales of ion immobility. The defining characteristics of the mechanism have been identified in 3D PIC simulations including the observation of a zero of the vector potential propagating at speed $\approx 1.4c$ through a high density ZVP electron bunch at the front surface of the plasma early in the ablative journey of the electron bunch. Simulations have suggested that from currently operational 10 PW short pulse laser facilities and foam targets, the ZVP mechanism can produce a train of attosecond duration, nano-Coulomb electron bunches, each with a transverse emittance of a few $\unit{nm.rad}$. Such charge and quality is comparable to state-of-the-art electron bunch accerators but on paradigm shifting timescales. Such timescales being those on which atomic processes occur, these electron bunches could be manipulated to literally `shed light' onto fundamental biological and chemical processes. Via a massive 2D PIC parameter scan the energies of such mass-limited electron bunches have been compared to those predicted by the ZVP model, identifying a range of validity for the model, specifically $a_0>10$, $S>1$. These simulations were also used to confirm the energy absorption scaling in 2D up to and into the QED regime. Chapter \ref{ch:4-gemini} details the upcoming GEMINI PW experiment to observe ZVP electron bunches for the first time. On the theme of experimentation, the following Chapter will now switch gears from absorption to reflection for the discussion recent results from the ORION laser facility.
